syntax = "proto3";
option csharp_namespace = "GrpcServiceDemo";


package GrpcServiceDemo;

// The greeting service definition.
service TestService {
	// Sends a greeting
	rpc SayHello (HelloRequest) returns (HelloReply);
	rpc SayHellos (HelloRequest) returns (stream HelloReply);
	rpc SayClientHellos (stream HelloRequest) returns (HelloReply);
	rpc BiDirectionalStreaming (stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
	string name = 1;
}

// The response message containing the greetings
message HelloReply {
	string message = 1;
}